Removed false exploit report If \r or \n was found in the protocol section it was reported as a exploit attempt.

--- a/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
+++ b/trio-ircproxy/scripts/mirc_mg_bauderr/MG_popups.ini
@@ -86,177 +86,180 @@ n12=..$iif(($chan(6)),$chan(6) $block($chan(6).status)) : /part $chan(6) * Trio-
 n13=..$iif(($chan(7)),$chan(7) $block($chan(7).status)) : /part $chan(7) * Trio-ircproxy.py & MG script named Bauderr *
 n14=..$iif(($chan(8)),$chan(8) $block($chan(8).status)) : /part $chan(8) * Trio-ircproxy.py & MG script named Bauderr *
 n15=..$iif(($chan(9)),$chan(9) $block($chan(9).status)) : /part $chan(9) * Trio-ircproxy.py & MG script named Bauderr *
-n16=..$iif(($chan(10)), $block($chan(10) $block($chan(10).status))) : /part $chan(10) * Trio-ircproxy.py & MG script named Bauderr *
-n17=..-
-n18=..partall : partall * Trio-ircproxy.py & MG script named Bauderr *
-n19=.[join room] 
-n20=..$submenu($parted_rooms($1))
+n16=..$iif(($chan(10)),$chan(10) $block($chan(10).status)) : /part $chan(10) * Trio-ircproxy.py & MG script named Bauderr *
+n17=..$iif(($chan(11)),$chan(11) $block($chan(11).status)) : /part $chan(11) * Trio-ircproxy.py & MG script named Bauderr *
+n18=..$iif(($chan(12)),$chan(12) $block($chan(12).status)) : /part $chan(12) * Trio-ircproxy.py & MG script named Bauderr *
+n19=..$iif(($chan(13)),$chan(13) $block($chan(13).status)) : /part $chan(13) * Trio-ircproxy.py & MG script named Bauderr *
+n20=..$iif(($chan(14)), $block($chan(14) $block($chan(14).status))) : /part $chan(14) * Trio-ircproxy.py & MG script named Bauderr *
 n21=..-
-n22=..[new room] : join $$input(Type a room name to join:,eoygbqk60,type a room name to join,#5ioE)
-n23=.-
-n24=.$iif(($status != connected),$style(2)) [motd] 
-n25=..$chr($asc([)) $+ $server $+ $chr($asc(])) : motd
-n26=..www.mslscript.com : msl_motd
-n27=..-
-n28=..on connect
-n29=...show www.mslscrpt.com : msl show-motd msl.com
-n30=...show irc server : msl show-motd irc_server
-n31=.-
-n32=.whois query
-n33=..$query(1) : whois $query(1)
-n34=..$query(2) : whois $query(2)
-n35=..$query(3) : whois $query(3)
-n36=..$query(4) : whois $query(4)
-n37=..$query(5) : whois $query(5)
-n38=..$query(6) : whois $query(6)
-n39=..$query(7) : whois $query(7)
-n40=..$query(8) : whois $query(8)
-n41=..$query(9) : whois $query(9)
-n42=..$iif(($query(10) != $null),$block($query(10))) : whois $query(10)
-n43=.[ial-fill]
-n44=..$chan(1) $ialupdated($chan(1)): /ialfill -f $chan(1)
-n45=..$chan(2) $ialupdated($chan(2)) : /ialfill -f $chan(2)
-n46=..$chan(3) $ialupdated($chan(3)) : /ialfill -f $chan(3)
-n47=..$chan(4) $ialupdated($chan(4)) : /ialfill -f $chan(4)
-n48=..$chan(5) $ialupdated($chan(5)) : /ialfill -f $chan(5)
-n49=..$chan(6) $ialupdated($chan(6)) : /ialfill -f $chan(6)
-n50=..$chan(7) $ialupdated($chan(7)) : /ialfill -f $chan(7)
-n51=..$chan(8) $ialupdated($chan(8)) : /ialfill -f $chan(8)
-n52=..$chan(9) $ialupdated($chan(9)) : /ialfill -f $chan(9)
-n53=..$iif(($chan(10) != $null),$block($chan(10) $ialupdated($chan(9)))) : /ialfill -f $chan(10)
-n54=..-
-n55=..room : ialfill -f $$input(Type a room:,eoygbqk60,type a room,#5ioE)
-n56=.-
-n57=.lusers : lusers
-n58=.links : links
-n59=.[list room] : list
+n22=..partall : partall * Trio-ircproxy.py & MG script named Bauderr *
+n23=.[join room] 
+n24=..$submenu($parted_rooms($1))
+n25=..-
+n26=..[new room] : join $$input(Type a room name to join:,eoygbqk60,type a room name to join,#5ioE)
+n27=.-
+n28=.$iif(($status != connected),$style(2)) [motd] 
+n29=..$chr($asc([)) $+ $server $+ $chr($asc(])) : motd
+n30=..www.mslscript.com : msl_motd
+n31=..-
+n32=..on connect
+n33=...show www.mslscrpt.com : msl show-motd msl.com
+n34=...show irc server : msl show-motd irc_server
+n35=.-
+n36=.whois query
+n37=..$query(1) : whois $query(1)
+n38=..$query(2) : whois $query(2)
+n39=..$query(3) : whois $query(3)
+n40=..$query(4) : whois $query(4)
+n41=..$query(5) : whois $query(5)
+n42=..$query(6) : whois $query(6)
+n43=..$query(7) : whois $query(7)
+n44=..$query(8) : whois $query(8)
+n45=..$query(9) : whois $query(9)
+n46=..$iif(($query(10) != $null),$block($query(10))) : whois $query(10)
+n47=.[ial-fill]
+n48=..$chan(1) $ialupdated($chan(1)): /ialfill -f $chan(1)
+n49=..$chan(2) $ialupdated($chan(2)) : /ialfill -f $chan(2)
+n50=..$chan(3) $ialupdated($chan(3)) : /ialfill -f $chan(3)
+n51=..$chan(4) $ialupdated($chan(4)) : /ialfill -f $chan(4)
+n52=..$chan(5) $ialupdated($chan(5)) : /ialfill -f $chan(5)
+n53=..$chan(6) $ialupdated($chan(6)) : /ialfill -f $chan(6)
+n54=..$chan(7) $ialupdated($chan(7)) : /ialfill -f $chan(7)
+n55=..$chan(8) $ialupdated($chan(8)) : /ialfill -f $chan(8)
+n56=..$chan(9) $ialupdated($chan(9)) : /ialfill -f $chan(9)
+n57=..$iif(($chan(10) != $null),$block($chan(10) $ialupdated($chan(9)))) : /ialfill -f $chan(10)
+n58=..-
+n59=..room : ialfill -f $$input(Type a room:,eoygbqk60,type a room,#5ioE)
 n60=.-
-n61=.quit : quit * Trio-ircproxy.py & MG script named Bauderr *
-n62=&client comm`s
-n63=.[auto-join invite]
-n64=..off : ajinvite off
-n65=..[on] : ajinvite on
-n66=.-
-n67=.a/q/op-message
-n68=..amsg : amsg $$input(Speak your message to all channels:,eygbqk60,type your message to all channels,I hear'd everyone is welcome to room 5ioE on Undernet.)
-n69=..ame : ame $$input(Describe your action to all channels:,eygbqk60,describe your action to all channel,wonders who is in room 5ioE on Undernet)
-n70=..-
-n71=..qmsg : qmsg $$input(Speak your message to all query windows:,eygbqk60,speak your message to all query windows,anyone know what /amsg does?)
-n72=..qme : qme $$input(Describe your action to all query windows:,eygbqk60,describe your action to all query windows,wonders what /qme will do...)
-n73=..-
-n74=..op notice : onotice-script
-n75=..op message : omsg-script
-n76=.-
-n77=.ban
-n78=..unban : ban -r $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type or ban mask:"
-n79=..ban : ban -bu700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter ban mask or nick and type:"
-n80=..ban kick : ban -ku700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nickname and ban type [sum1znick 2] and kick message:"
-n81=..ban except : ban -e $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask:"
-n82=..invite : ban -I $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask"
-n83=..quiet : ban -q $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type:"
-n84=.[channnel dialog] : channel $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32))
-n85=.-
-n86=.clear status : clear -s
-n87=.[clearall]
-n88=..status : clearall -s
-n89=..channel : clearall -c
-n90=..query : clearall -q
-n91=..messages : clearall -m
-n92=..[windows] : clearall -a
-n93=.[close]
-n94=..gets : close -g
-n95=..sends : close -s
-n96=..fserve : close -f
-n97=..chats : close -c
-n98=..-
-n99=..[inactive] : close -i
-n100=.-
-n101=.chat request $block($iif($creq == auto,accept,$creq))
-n102=..minimize
-n103=...ask : creq +m ask
-n104=...accept : creq +m auto
-n105=...ignore : creq +m ignore
-n106=..ask : creq -m ask
-n107=..accept : creq -m auto
-n108=..ignore : creq -m ignore
-n109=.send request $block($iif($sreq == auto,accept,$sreq))
-n110=..minimize
-n111=...ask : sreq +m ask
-n112=...accept : sreq +m auto
-n113=...ignore : sreq +m ignore
-n114=..ask : sreq -m ask
-n115=..accept : sreq -m auto
-n116=..ignore : sreq -m ignore
-n117=.-
-n118=.dns
-n119=..nick : dns -46 $$?="enter nickname:"
-n120=..host : dns -h46 $$?="enter hostname:"
-n121=.[localinfo] 
-n122=..127.0.0.1 : localinfo 127.0.0.1 | set $varname_global(localinfo,blank) 127.0.0.1
-n123=..lookup 192.168.x.x : if $status == connected) { localinfo -u } | else { localinfo -h } | set $varname_global(localinfo,blank) -h
-n124=..[lookup irc-server] : if $status == connected) { localinfo -u | eecho you must setup port forwarding and static ip to mac address with your routers web-server. } | else { localinfo -h | errecho not connected to irc-server. using /localinfo localhost switch instead. } | set $varname_global(localinfo,blank) -u 
-n125=.-
-n126=.$iif($donotdisturb == $true,$style(1)) [do not disturb] : /donotdisturb $iif($donotdisturb == $true,off,on)
-n127=.[color rainbow sky] : color -s rainbow sky
-n128=.-
-n129=.nickname
-n130=..main nick : mnick $$?="ener your main nickname:"
-n131=..alternate nick : anick $$?="ener your alternate nickname:"
-n132=..temporary nick : tnick $$?="ener your temporary nickname:"
-n133=.[spoof email && name]
-n134=..[emailaddr] : /emailaddr mg-script
-n135=..[fullname] : /fullname .: mg script :: : @ https://Ashburry.PythonAnywhere.com/
-n136=..-
-n137=..[set both] : /emailaddr MG-script | /fullname : :: MG script :. @ https://Ashburry.PythonAnywhere.com/
-n138=.-
-n139=.exit : exit
-n140=.-
-n141=.[resetidle $block($idle)]: /resetidle $?="enter number of seconds:"
-n142=-
-n143=script &functions
-n144=.anti i&dle
-n145=.[&auto-away]
-n146=.-
-n147=.[&show irc oper]
-n148=.$style_show_away [&show away nick]
-n149=..$style_show_away_note notice : set_show_away 1
-n150=..$style_show_away_priv [private message] : set_show_away 2
-n151=..-
-n152=..$style_show_away_not do not show : set_show_away 0
-n153=.-
-n154=.[&auto-identify chan]
-n155=.[&auto-identify nick]
-n156=.[auto-join &room]
-n157=..&edit room list
-n158=..&renmove thus room
-n159=..[&add this room]
-n160=..-
-n161=..[&switch on]
-n162=.-
-n163=.[&ascii-art]
-n164=..&stop play
-n165=..pl&ay here
-n166=...[select file]
-n167=.[&bin-art]
+n61=.lusers : lusers
+n62=.links : links
+n63=.[list room] : list
+n64=.-
+n65=.quit : quit * Trio-ircproxy.py & MG script named Bauderr *
+n66=&client commands
+n67=.[auto-join invite]
+n68=..off : ajinvite off
+n69=..[on] : ajinvite on
+n70=.-
+n71=.a/q/op-message
+n72=..amsg : amsg $$input(Speak your message to all channels:,eygbqk60,type your message to all channels,I hear'd everyone is welcome to room 5ioE on Undernet.)
+n73=..ame : ame $$input(Describe your action to all channels:,eygbqk60,describe your action to all channel,wonders who is in room 5ioE on Undernet)
+n74=..-
+n75=..qmsg : qmsg $$input(Speak your message to all query windows:,eygbqk60,speak your message to all query windows,anyone know what /amsg does?)
+n76=..qme : qme $$input(Describe your action to all query windows:,eygbqk60,describe your action to all query windows,wonders what /qme will do...)
+n77=..-
+n78=..op notice : onotice-script
+n79=..op message : omsg-script
+n80=.-
+n81=.ban
+n82=..unban : ban -r $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type or ban mask:"
+n83=..ban : ban -bu700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter ban mask or nick and type:"
+n84=..ban kick : ban -ku700 $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nickname and ban type [sum1znick 2] and kick message:"
+n85=..ban except : ban -e $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask:"
+n86=..invite : ban -I $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick mask"
+n87=..quiet : ban -q $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32)) $$?="enter nick and type:"
+n88=.[channnel dialog] : channel $iif($chan,$ifmatch,$gettok($$?="enter room name:",1,32))
+n89=.-
+n90=.clear status : clear -s
+n91=.[clearall]
+n92=..status : clearall -s
+n93=..channel : clearall -c
+n94=..query : clearall -q
+n95=..messages : clearall -m
+n96=..[windows] : clearall -a
+n97=.[close]
+n98=..gets : close -g
+n99=..sends : close -s
+n100=..fserve : close -f
+n101=..chats : close -c
+n102=..-
+n103=..[inactive] : close -i
+n104=.-
+n105=.chat request $block($iif($creq == auto,Aaccept,$creq))
+n106=..minimize
+n107=...ask : creq +m ask
+n108=...accept : creq +m auto
+n109=...ignore : creq +m ignore
+n110=..ask : creq -m ask
+n111=..accept : creq -m auto
+n112=..ignore : creq -m ignore
+n113=.send request $block($iif($sreq == auto,accept,$sreq))
+n114=..minimize
+n115=...ask : sreq +m ask
+n116=...accept : sreq +m auto
+n117=...ignore : sreq +m ignore
+n118=..ask : sreq -m ask
+n119=..accept : sreq -m auto
+n120=..ignore : sreq -m ignore
+n121=.-
+n122=.dns
+n123=..nick : dns -46 $$?="enter nickname:"
+n124=..host : dns -h46 $$?="enter hostname:"
+n125=.[localinfo] 
+n126=..127.0.0.1 : localinfo 127.0.0.1 | set $varname_global(localinfo,blank) 127.0.0.1
+n127=..lookup 192.168.x.x : if $status == connected) { localinfo -u } | else { localinfo -h } | set $varname_global(localinfo,blank) -h
+n128=..[lookup irc-server] : if $status == connected) { localinfo -u | eecho you must setup port forwarding and static ip to mac address with your routers web-server. } | else { localinfo -h | errecho not connected to irc-server. using /localinfo localhost switch instead. } | set $varname_global(localinfo,blank) -u 
+n129=.-
+n130=.$iif($donotdisturb == $true,$style(1)) [do not disturb] : /donotdisturb $iif($donotdisturb == $true,off,on)
+n131=.[color rainbow sky] : color -s rainbow sky
+n132=.-
+n133=.nickname
+n134=..main nick : mnick $$?="ener your main nickname:"
+n135=..alternate nick : anick $$?="ener your alternate nickname:"
+n136=..temporary nick : tnick $$?="ener your temporary nickname:"
+n137=.[spoof email && name]
+n138=..[emailaddr] : /emailaddr mg-script
+n139=..[fullname] : /fullname .: mg script :: : @ https://Ashburry.PythonAnywhere.com/
+n140=..-
+n141=..[set both] : /emailaddr MG-script | /fullname : :: MG script :. @ https://Ashburry.PythonAnywhere.com/
+n142=.-
+n143=.exit : exit
+n144=.-
+n145=.[resetidle $block($idle)]: /resetidle $?="enter number of seconds:"
+n146=-
+n147=script &functions
+n148=.anti i&dle
+n149=.[&auto-away]
+n150=.-
+n151=.[&show irc oper]
+n152=.$style_show_away [&show away nick]
+n153=..$style_show_away_note notice : set_show_away 1
+n154=..$style_show_away_priv [private message] : set_show_away 2
+n155=..-
+n156=..$style_show_away_not do not show : set_show_away 0
+n157=.-
+n158=.[&auto-identify chan]
+n159=.[&auto-identify nick]
+n160=.[auto-join &room]
+n161=..&edit room list
+n162=..&renmove thus room
+n163=..[&add this room]
+n164=..-
+n165=..[&switch on]
+n166=.-
+n167=.[&ascii-art]
 n168=..&stop play
-n169=..[pl&ay here]
+n169=..pl&ay here
 n170=...[select file]
-n171=.[&sound]
-n172=..stop play : splay stop
-n173=..[play here]
-n174=...$submenu($play-sound-history($1))
-n175=...[select file] : play-sound $iif($active == $chan || $active == $nick,$ifmatch,$gettok($$?="enter a room or nickname to play to:",1,32)) $qw($sfile($sound($INPUT(Select a sound folder source:,ygbqdum,select a sound folder source,$active,mp3,midi,ogg,wma,wave)),*.mp3;*.ogg;*.wma;*.mid;*.wav),Select a sound file:, Play))
-n176=&room functions
-n177=.&chanserv
-n178=.topi&c history
-n179=.-
-n180=.[&allow prevention]
-n181=.[ir&c oper scan]
-n182=.-
-n183=.n&etwork channel link
-n184=-
-n185=&trio-ircproxy.py
-n186=&xdcc search
+n171=.[&bin-art]
+n172=..&stop play
+n173=..[pl&ay here]
+n174=...[select file]
+n175=.[&sound]
+n176=..stop play : splay stop
+n177=..[play here]
+n178=...$submenu($play-sound-history($1))
+n179=...[select file] : play-sound $iif($active == $chan || $active == $nick,$ifmatch,$gettok($$?="enter a room or nickname to play to:",1,32)) $qw($sfile($sound($INPUT(Select a sound folder source:,ygbqdum,select a sound folder source,$active,mp3,midi,ogg,wma,wave)),*.mp3;*.ogg;*.wma;*.mid;*.wav),Select a sound file:, Play))
+n180=&room functions
+n181=.&chanserv
+n182=.topi&c history
+n183=.-
+n184=.[&allow prevention]
+n185=.[ir&c oper scan]
+n186=.-
 n187=-
-n188=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
-n189=&connect irc
+n188=&trio-ircproxy.py
+n189=&xdcc search
+n190=-
+n191=$iif(($status == connected),&quit irc) : quit 54,88.: MG script named Bauderr :: :
+n192=&connect irc
